--- a/ios/ClearSpendMobile/Info.plist
+++ b/ios/ClearSpendMobile/Info.plist
@@ -100,5 +100,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>clearspend</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
