--- a/.env.example
+++ b/.env.example
@@ -52,4 +52,4 @@ FA_CLIENT_ID=''
 STRIPE_PUBLISHABLE_KEY=''
 STRIPE_ACCOUNT=''
 MIXPANEL_PROJECT_TOKEN=fae11a3a59ea09ae6e4e9192a99220fb
-SHOW_ADMIN=true
+LAUNCHDARKLY_SDK_KEY='mob-b62092d9-4d44-4fcc-8847-9fba30522210'
